précision sur Tabula Rasa

--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -42,7 +42,7 @@
             <li> Les cartes joker ...</li>
             <li> (image à centrer) <img src="images/carteFallacy.png" alt="carte Fallacy"> La carte Fallacy : en la posant sur le nom d'un joueur, permet de lui faire passer 3 tours;</li>
             <li> La carte Justification : en la posant sur son propre nom, annule les effets de Fallacy; </li>
-            <li> La carte Tabula Rasa : permet de supprimer une carte d'un prémisse (en cas d'erreur, appuyer sur echap pour annuler); </li>
+            <li> La carte Tabula Rasa : permet de supprimer une carte d'un prémisse et de la remettre à la fin du paquet (en cas d'erreur, appuyer sur echap pour annuler); </li>
             <li> La carte Revolution : permet d'échanger deux cartes dans les prémisses;</li>
             <li> La carte Ergo : ne peut être jouée que si toutes les lettres sont présentes dans les prémisses. Elle permet alors de mettre fin au tour.</li>
         </ul>
