intégration du html dans le main et proposition de fond

--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <div id=article>
         <h1> ERGO, prouves que tu existes </h1>
 
         <h2> Règles du jeu :</h2>
@@ -40,7 +41,7 @@
         <h2> Les cartes spéciales </h2>
         <ul>
             <li> Les cartes joker ...</li>
-            <li> (image à centrer) <img src="images/carteFallacy.png" alt="carte Fallacy"> La carte Fallacy : en la posant sur le nom d'un joueur, permet de lui faire passer 3 tours;</li>
+            <li> <img src="images/carteFallacy.png" alt="carte Fallacy"> La carte Fallacy : en la posant sur le nom d'un joueur, permet de lui faire passer 3 tours;</li>
             <li> La carte Justification : en la posant sur son propre nom, annule les effets de Fallacy; </li>
             <li> La carte Tabula Rasa : permet de supprimer une carte d'un prémisse et de la remettre à la fin du paquet (en cas d'erreur, appuyer sur echap pour annuler); </li>
             <li> La carte Revolution : permet d'échanger deux cartes dans les prémisses;</li>
@@ -52,6 +53,6 @@
             <p> <small> Delay-Desforets Projet DU CCIE </small> </p> <a href = "http://paulconstans.ddns.info/redmine "> <img src="images/carteBack.png" alt="logo"/> </a>
 
         </footer>
-
+        </div>
     </body>
 </html>
