penser à décrire le cheat mode

--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -34,6 +34,7 @@
             <li> à plusieurs joueurs (4 maximum);</li>
             <li> face à l'ordinnateur. </li>
         </ul>
+        <!-- Décrire aussi le cheat mode-->
         <p> A chaque tour, vous pouvez déposer sur les lignes de votre choix deux cartes au maximum grâce à la souris.
         <br> Si vous voulez vous défausser d'une carte, faite glisser celle-ci sur pile.
         <br> Vous pouvez retourner un parenthèse dans votre main à l'aide d'un clic droit.
