--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -33,16 +33,24 @@
 			<li> à plusieurs joueurs (4 maximum);</li>
 			<li> face à l'ordinnateur. </li>
 		</ul>
+		<img src="images/ima1.png" alt="intro"/>
 		<p> A chaque tour, vous pouvez déposer sur les lignes de votre choix deux cartes au maximum grâce à la souris. 
 		<br> Si vous voulez vous défausser d'une carte, faite glisser celle-ci sur pile.
-		<br> le jouer courant est toujours celui en haut à gauche.</p>
+		<br> Le jouer courant est toujours celui en haut à gauche.
+		<br> Une fois votre choix fait, vous validez avec le bouton jouer.</p>
+		<img src="images/ima2.png" alt="jeu"/>
 		<h2> Les cartes spéciales </h2>
 		<ul>
-			<li> La carte Falacy : permet en posant sur le nom d'un joueur de lui faire passer 3 tours;</li>
+			<li> La carte Fallacy : permet en posant sur le nom d'un joueur de lui faire passer 3 tours;</li>
+			<img src="images/carteFallacy.png" />
 			<li> La carte Justification : annule la précédente; </li>
+			<img src="images/carteJustification.png" />
 			<li> La carte Tabula Rasa : permet de supprimer une carte d'un prémisse; </li>
+			<img src="images/carteTabulaRasa.png" />
 			<li> La carte Revolution : permet de changer le sens du jeu;</li>
+			<img src="images/carteRevolution.png" />
 			<li> La carte Ergo : permet de mettre fin au tour et de compter les points.</li>
+			<img src="images/carteErgo.png" />
 		</ul>
 		 
 		<footer>
