correction de quelques fôtes

--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -32,10 +32,10 @@
         <p> Dans la fenêtre d'introduction vous pouvez choisir le mode de jeu :</p>
         <ul>
             <li> à plusieurs joueurs (4 maximum);</li>
-            <li> face à l'ordinnateur. </li>
+            <li> face à l'ordinateur. </li>
         </ul>
         <img src="images/ima1.png" alt="intro"/>
-        <p> A chaque tour, vous pouvez déposer sur les lignes de votre choix deux cartes au maximum grâce à la souris.
+        <p> À chaque tour, vous pouvez déposer sur les lignes de votre choix deux cartes au maximum grâce à la souris.
         <br> Si vous voulez vous défausser d'une carte, faite glisser celle-ci sur pile.
         <br> Vous pouvez retourner un parenthèse dans votre main à l'aide d'un clic droit.
         <br> Le joueur courant est toujours celui en haut à gauche.</p>
@@ -64,7 +64,8 @@
         </div>
     </body>
 
- <!--   <head>
+ <!--
+  <head>
         <meta charset = "utf-8"/>
         <link href="styleErgo.css" rel="stylesheet">
         <title> ISN Lycée Paul Constans </title>
@@ -115,6 +116,8 @@
             <li> La carte Revolution : permet d'échanger deux cartes dans les prémisses;</li>
             <li> La carte Ergo : ne peut être jouée que si toutes les lettres sont présentes dans les prémisses. Elle permet alors de mettre fin au tour.</li>
         </ul>
+
+        Ajouter priorités et règles de logique...
 
         <footer>
 
