--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "utf-8"/>
         <link href="styleErgo.css" rel="stylesheet">
-        <title> ISN Lycée Paul Constans </title>
+        <title> ERGO -- règles du jeu </title>
     </head>
 
     <body>
@@ -18,8 +18,7 @@
         <br> À chaque manche, les joueurs essaient collectivement de créer une preuve de leur existence tout en réfutant l'existence des autres joueurs.
         <br>À chaque tour, un joueur pioche deux cartes et doit jouer deux cartes (éventuellement les défausser). <br>Lorsque une carte Ergo est jouée ou qu'il n'y a plus de carte dans la pioche la preuve est terminée.
         <br>À condition qu'il n'y ait pas de paradoxe, chaque joueur dont l'existence est prouvée reçoit un nombre de points égal au nombre de cartes dans la preuve.
-        <br>Un cheat mode permet de savoir ce qui est prouvé.
-        <br>Toutes les cartes sont ensuite mélangée et une nouvelle manche est lancée. Le premier joueur ayant 50 points gagne. </p>
+        <br>Toutes les cartes sont ensuite mélangées et une nouvelle manche est lancée. Le premier joueur ayant 50 points gagne. </p>
 
         <p> Concernant la construction de la preuve, un certain nombre de règles doivent être respectées :</p>
 
@@ -27,7 +26,7 @@
             <li> la preuve doit avoir au maximum 4 lignes. Dès qu'elle atteint 4 lignes, toutes les cartes supplémentaires doivent être jouées sur une de ces lignes ; </li>
             <li> chaque ligne doit être syntaxiquement correcte (deux opérateurs ou deux variables ne peuvent pas se suivre, chaque parenthèse ouvrante doit correspondre à une parenthèse fermante, ...) ; </li>
             <li> une carte peut être insérée entre deux cartes déjà posées à condition que le résultat reste syntaxiquement correct ; </li>
-            <li> les priorités sont (du plus au moins) : NON, ET, OU, IMPLIQUE ; </li>
+            <li> les priorités sont (du plus prioritaire au moins prioritaire) : NON, ET, OU, IMPLIQUE. Si plusieurs cartes ont le même niveau de priorité, la lecture se fait de gauche à droite. Par exemple, A => B ET C => D représente (A => (B ET C)) => D ; </li>
             <li> on utilise les règles usuelles de logique : lois de Morgan, Modus Ponens, ...</li>
         </ul>
 
@@ -37,6 +36,7 @@
             <li> à plusieurs joueurs (4 maximum);</li>
             <li> face à l'ordinateur. </li>
         </ul>
+        Vous pouvez également sélectionner le "cheat mode". Dans ce cas, un bouton vous permet de savoir ce qui est actuellement prouvé.</li>
         <img src="images/ima1.png" alt="intro"/>
         <p> À chaque tour, vous pouvez déposer sur les lignes de votre choix deux cartes au maximum grâce à la souris.
         <br> Si vous voulez vous défausser d'une carte, faite glisser celle-ci sur pile.
@@ -59,11 +59,11 @@
 
         <h2> Les cartes spéciales </h2>
         <ul>
-            <li> <img src="images/carteFallacy.png" /> La carte Fallacy : permet en posant sur le nom d'un joueur de lui faire passer 3 tours;</li>
+            <li> <img src="images/carteFallacy.png" /> La carte Fallacy : en posant cette carte sur le nom d'un joueur, ce dernier n'a pas le droit de poser de carte sur lz preuve pendant 3 tours. Il peut cependant jouer des cartes Fallacy ou Justification;</li>
 
             <li> <img src="images/carteJustification.png" /> La carte Justification : annule la précédente; </li>
 
-            <li> <img src="images/carteTabulaRasa.png" /> La carte Tabula Rasa : permet de supprimer une carte d'un prémisse et de la remettre à la fin du paquet (en cas d'erreur, appuyer sur echap pour annuler); </li>
+            <li> <img src="images/carteTabulaRasa.png" /> La carte Tabula Rasa : permet de supprimer une carte d'une prémisse et de la remettre à la fin du paquet (en cas d'erreur, appuyer sur echap pour annuler); </li>
 
             <li> <img src="images/carteRevolution.png" /> La carte Revolution : permet d'échanger deux cartes dans les prémisses;</li>
 
