--- a/regles_ergo.html
+++ b/regles_ergo.html
@@ -59,7 +59,7 @@
 
         <h2> Les cartes spéciales </h2>
         <ul>
-            <li> <img src="images/carteFallacy.png" /> La carte Fallacy : en posant cette carte sur le nom d'un joueur, ce dernier n'a pas le droit de poser de carte sur lz preuve pendant 3 tours. Il peut cependant jouer des cartes Fallacy ou Justification;</li>
+            <li> <img src="images/carteFallacy.png" /> La carte Fallacy : en posant cette carte sur le nom d'un joueur, ce dernier n'a pas le droit de poser de carte sur la preuve pendant 3 tours. Il peut cependant jouer des cartes Fallacy ou Justification;</li>
 
             <li> <img src="images/carteJustification.png" /> La carte Justification : annule la précédente; </li>
 
