Renommage de Ergo en PrYE

--- a/regles_prye.html
+++ b/regles_prye.html
@@ -2,21 +2,21 @@
 <html>
     <head>
         <meta charset = "utf-8"/>
-        <link href="styleErgo.css" rel="stylesheet">
-        <title> ERGO -- règles du jeu </title>
+        <link href="stylePrye.css" rel="stylesheet">
+        <title> PrYE -- règles du jeu </title>
     </head>
 
     <body>
         <div id=article>
-        <h1> ERGO, prouves que tu existes </h1>
+        <h1> PrYE, Prove You Exist </h1>
 
         <h2> Règles du jeu :</h2>
 
-        <p> Le jeu est composé de 55 cartes : 4 de chaque variable (A, B, C ou D), 4 de chaque opérateur (ET, OU, =>), 6 cartes NON, 8 parenthèses, 3 cartes Ergo et 10 cartes particulières. </p>
+        <p> Le jeu est composé de 55 cartes : 4 de chaque variable (A, B, C ou D), 4 de chaque opérateur (ET, OU, =>), 6 cartes NON, 8 parenthèses, 3 cartes QED et 10 cartes particulières. </p>
 
         <p> Chaque joueur (4 maximum) se voit assigné une variable (A, B, C ou D) au début du jeu.
         <br> À chaque manche, les joueurs essaient collectivement de créer une preuve de leur existence tout en réfutant l'existence des autres joueurs.
-        <br>À chaque tour, un joueur pioche deux cartes et doit jouer deux cartes (éventuellement les défausser). <br>Lorsque une carte Ergo est jouée ou qu'il n'y a plus de carte dans la pioche la preuve est terminée.
+        <br>À chaque tour, un joueur pioche deux cartes et doit jouer deux cartes (éventuellement les défausser). <br>Lorsque une carte QED est jouée ou qu'il n'y a plus de carte dans la pioche la preuve est terminée.
         <br>À condition qu'il n'y ait pas de paradoxe, chaque joueur dont l'existence est prouvée reçoit un nombre de points égal au nombre de cartes dans la preuve.
         <br>Toutes les cartes sont ensuite mélangées et une nouvelle manche est lancée. Le premier joueur ayant 50 points gagne. </p>
 
@@ -43,7 +43,7 @@
         <br> Vous pouvez retourner un parenthèse dans votre main à l'aide d'un clic droit.
         <br> Le joueur courant est toujours celui en haut à gauche.</p>
         <img src="images/ima2.png" alt="jeu"/>
-        
+
         <h2> Les cartes </h2>
         <ul>
             <li> <img src="images/carteA.png" /> <img src="images/carteB.png" /> <img src="images/carteC.png" /> <img src="images/carteD.png" /> : les variables représentant chaque joueur ;</li>
@@ -67,7 +67,7 @@
 
             <li> <img src="images/carteRevolution.png" /> La carte Revolution : permet d'échanger deux cartes dans les prémisses;</li>
 
-            <li> <img src="images/carteErgo.png" /> La carte Ergo : ne peut être jouée que si toutes les lettres sont présentes dans les prémisses. Elle permet alors de mettre fin au tour.</li>
+            <li> <img src="images/carteQED.png" /> La carte QED : ne peut être jouée que si toutes les lettres sont présentes dans les prémisses. Elle permet alors de mettre fin au tour.</li>
 
         </ul>
 
@@ -79,6 +79,6 @@
         </div>
     </body>
 
- 
+
 
 </html>
